# restapi/operations/get_meet_info_responses.go
@@ -1,0 +1,126 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"calendar/models"
+)
+
+// GetMeetInfoOKCode is the HTTP code returned for type GetMeetInfoOK
+const GetMeetInfoOKCode int = 200
+
+/*GetMeetInfoOK Ok
+
+swagger:response getMeetInfoOK
+*/
+type GetMeetInfoOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.MeetInfo `json:"body,omitempty"`
+}
+
+// NewGetMeetInfoOK creates GetMeetInfoOK with default headers values
+func NewGetMeetInfoOK() *GetMeetInfoOK {
+
+	return &GetMeetInfoOK{}
+}
+
+// WithPayload adds the payload to the get meet info o k response
+func (o *GetMeetInfoOK) WithPayload(payload *models.MeetInfo) *GetMeetInfoOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get meet info o k response
+func (o *GetMeetInfoOK) SetPayload(payload *models.MeetInfo) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMeetInfoOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetMeetInfoBadRequestCode is the HTTP code returned for type GetMeetInfoBadRequest
+const GetMeetInfoBadRequestCode int = 400
+
+/*GetMeetInfoBadRequest Creation failed
+
+swagger:response getMeetInfoBadRequest
+*/
+type GetMeetInfoBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewGetMeetInfoBadRequest creates GetMeetInfoBadRequest with default headers values
+func NewGetMeetInfoBadRequest() *GetMeetInfoBadRequest {
+
+	return &GetMeetInfoBadRequest{}
+}
+
+// WithPayload adds the payload to the get meet info bad request response
+func (o *GetMeetInfoBadRequest) WithPayload(payload *models.ErrorResponse) *GetMeetInfoBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get meet info bad request response
+func (o *GetMeetInfoBadRequest) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMeetInfoBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetMeetInfoNotFoundCode is the HTTP code returned for type GetMeetInfoNotFound
+const GetMeetInfoNotFoundCode int = 404
+
+/*GetMeetInfoNotFound Not found
+
+swagger:response getMeetInfoNotFound
+*/
+type GetMeetInfoNotFound struct {
+}
+
+// NewGetMeetInfoNotFound creates GetMeetInfoNotFound with default headers values
+func NewGetMeetInfoNotFound() *GetMeetInfoNotFound {
+
+	return &GetMeetInfoNotFound{}
+}
+
+// WriteResponse to the client
+func (o *GetMeetInfoNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
